<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.Characters.view.CharacterFragment">

   <TextView
       android:id="@+id/tv_specie"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/txt_specie"
       app:layout_constraintTop_toTopOf="parent"/>
   <com.google.android.material.chip.ChipGroup
       android:id="@+id/chip_group_specie"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:singleSelection="true"
       app:layout_constraintTop_toBottomOf="@id/tv_specie">
      <com.google.android.material.chip.Chip
          android:id="@+id/chip_alien"
          style="@style/Widget.MaterialComponents.Chip.Choice"
          android:tag="species=alien"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/txt_alien" />

      <com.google.android.material.chip.Chip
          android:id="@+id/chip_animal"
          style="@style/Widget.MaterialComponents.Chip.Choice"
          android:tag="species=animal"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/txt_animal" />

      <com.google.android.material.chip.Chip
          android:id="@+id/chip_human"
          style="@style/Widget.MaterialComponents.Chip.Choice"
          android:tag="species=human"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/txt_human" />

      <com.google.android.material.chip.Chip
          android:id="@+id/chip_humanoid"
          style="@style/Widget.MaterialComponents.Chip.Choice"
          android:tag="species=humanoid"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/txt_humanoid" />
   </com.google.android.material.chip.ChipGroup>

   <TextView
       android:id="@+id/tv_status"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/txt_status"
       app:layout_constraintTop_toBottomOf="@id/chip_group_specie"/>

   <com.google.android.material.chip.ChipGroup
       android:id="@+id/chip_group_status"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:singleSelection="true"
       app:layout_constraintTop_toBottomOf="@id/tv_status">

      <com.google.android.material.chip.Chip
          android:id="@+id/chip_alive"
          style="@style/Widget.MaterialComponents.Chip.Choice"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:tag="status=alive"
          android:text="@string/txt_alive" />

      <com.google.android.material.chip.Chip
          android:id="@+id/chip_dead"
          style="@style/Widget.MaterialComponents.Chip.Choice"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:tag="status=dead"
          android:text="@string/txt_dead" />

      <com.google.android.material.chip.Chip
          android:id="@+id/chip_unknown"
          style="@style/Widget.MaterialComponents.Chip.Choice"
          android:tag="status=unknown"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/txt_unknown" />
   </com.google.android.material.chip.ChipGroup>
   <TextView
       android:id="@+id/tv_gender"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toBottomOf="@id/chip_group_status"
       android:text="@string/txt_gender"/>

   <com.google.android.material.chip.ChipGroup
       android:id="@+id/chip_group_gender"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:singleSelection="true"
       app:layout_constraintTop_toBottomOf="@id/tv_gender">

      <com.google.android.material.chip.Chip
          android:id="@+id/chip_female"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:tag="gender=female"
          style="@style/Widget.MaterialComponents.Chip.Choice"
          android:text="@string/txt_female" />

      <com.google.android.material.chip.Chip
          android:id="@+id/chip_male"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:tag="gender=male"
          style="@style/Widget.MaterialComponents.Chip.Choice"
          android:text="@string/txt_male" />

   </com.google.android.material.chip.ChipGroup>

   <androidx.appcompat.widget.AppCompatButton
       android:id="@+id/btn_search_character"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/txt_search"
       android:textAllCaps="false"
       app:layout_constraintTop_toBottomOf="@id/chip_group_gender" />

   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/rv_characters"
       android:layout_width="match_parent"
       android:layout_height="@dimen/zero"
       android:padding="10dp"
       app:layout_constraintTop_toBottomOf="@id/btn_search_character"
       app:layout_constraintBottom_toTopOf="@id/btn_forward"/>

   <TextView
       android:id="@+id/btn_back"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:background="@drawable/selector_arrow_back"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"
       android:enabled="false"/>

   <TextView
       android:id="@+id/btn_forward"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:background="@drawable/selector_arrow_forward"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       android:enabled="false"/>


</androidx.constraintlayout.widget.ConstraintLayout>